# rust-auth-server

./: .gitignore  Cargo.toml  Dockerfile.amazonlinux2018.03  Dockerfile.ubuntu16.04  Dockerfile.ubuntu18.04  Makefile  README.md  rustfmt.toml
.github/workflows/: rust.yml
scripts/: bootstrap_db.sh  build_deb.sh  build_deb_docker.sh
src/: app.rs  auth_handler.rs  auth_routes.rs  change_password_handler.rs  change_password_routes.rs  email_service.rs  errors.rs  google_openid.rs  invitation_handler.rs  invitation_routes.rs  lib.rs  logged_user.rs  main.rs  models.rs  register_handler.rs  register_routes.rs  rust_auth_server.rs  schema.rs  ses_client.rs  static_files.rs  utils.rs
static/: change_password.html  index.html  login.html  main.css  main.js  register.html
