[package]
name = "rust_auth_server"
version = "0.2.1"
license="MPL-2.0+/LGPL-3.0+"
authors = ["mygnu <tech@hgill.io>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2"
actix-identity = "0.2"

bcrypt = "0.6"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
derive_more = "0.99"
env_logger = "0.7"
jsonwebtoken = "7.0.0-alpha.2"
futures = "0.3"
r2d2 = "0.8"
serde_derive="1.0"
serde_json="1.0"
serde="1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
failure = "0.1"
log = "0.4"
rusoto_core = {version = "0.42", default_features = false, features=["rustls"]}
rusoto_ses = {version = "0.42", default_features = false, features=["rustls"]}
maplit = "1.0"

[profile.release]
lto= true
opt-level= 3

[lib]
name = "rust_auth_server"
path = "src/lib.rs"

[[bin]]
name = "rust_auth_server_bin"
path = "src/main.rs"
doc = false
