[package]
name = "rust_auth_server"
version = "0.5.10"
license="MPL-2.0+/LGPL-3.0+"
authors = ["mygnu <tech@hgill.io>"]
edition = "2018"

[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2"
actix-identity = "0.2"

bcrypt = "0.6"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "uuid", "r2d2", "chrono", "uuidv07"] }
dotenv = "0.15"
derive_more = "0.99"
env_logger = "0.7"
jsonwebtoken = "7.0"
futures = "0.3"
r2d2 = "0.8"
serde_json="1.0"
serde = { version="1.0", features=["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
rusoto_core = {version = "0.43", default_features = false, features=["rustls"]}
rusoto_ses = {version = "0.43", default_features = false, features=["rustls"]}
sts_profile_auth = "0.5"
maplit = "1.0"
anyhow = "1.0"
thiserror = "1.0"
actix-threadpool = "0.3"
lazy_static = "1.4"
parking_lot = "0.10"
tokio = {version="0.2", features=["full"]}
async-trait = "0.1"
dirs = "2.0"
openidconnect = {git="https://github.com/ddboline/openidconnect-rs.git", branch="master", features=["futures-03", "reqwest-010"]}
url = "2.1"

[profile.release]
lto= true
opt-level= 3

[lib]
name = "rust_auth_server"
path = "src/lib.rs"

[[bin]]
name = "rust_auth_server_bin"
path = "src/main.rs"
doc = false
